add tictactok game

--- a/week8/Section_A_techin509_week8.ipynb
+++ b/week8/Section_A_techin509_week8.ipynb
@@ -861,11 +861,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "Qbjn48tRSsEF"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending email: Hello, this is an email!\n",
+      "Sending SMS: Hello, this is an SMS!\n",
+      "Sending push notification: Hello, this is a push notification!\n"
+     ]
+    }
+   ],
    "source": [
     "# Abstractions (Abstract Base Class)\n",
     "from abc import ABC, abstractmethod\n",
@@ -873,7 +883,7 @@
     "class NotificationMethod(ABC):\n",
     "    @abstractmethod\n",
     "    def send(self, message):\n",
-    "        pass\n",
+    "        print(f'Sending message: {message}')\n",
     "\n",
     "# Concrete Implementations\n",
     "class EmailNotification(NotificationMethod):\n",
@@ -883,6 +893,13 @@
     "class SMSNotification(NotificationMethod):\n",
     "    def send(self, message):\n",
     "        print(f\"Sending SMS: {message}\")\n",
+    "\n",
+    "# Add AppPushNotification\n",
+    "class AppPushNotification(NotificationMethod):\n",
+    "    def send(self, message):\n",
+    "        print(f\"Sending push notification: {message}\")\n",
+    "    def receive(self):\n",
+    "        print('Receiving push notification')\n",
     "\n",
     "# Inversion of Control\n",
     "class NotificationService:\n",
@@ -900,7 +917,10 @@
     "sms_service = NotificationService(sms_notifier)\n",
     "\n",
     "email_service.send_notification(\"Hello, this is an email!\")\n",
-    "sms_service.send_notification(\"Hello, this is an SMS!\")"
+    "sms_service.send_notification(\"Hello, this is an SMS!\")\n",
+    "\n",
+    "app_push_notifier = AppPushNotification()\n",
+    "app_push_notifier.send(\"Hello, this is a push notification!\")"
    ]
   },
   {
